@@ -1,5 +1,12 @@
 2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* gfxmenu/gui_list.c (draw_menu): Don't add scrollbar width to padding.
+	Removed drawing_scrollbar argument. All users updated
+	Fixes #29792.
+	Reported by Jo Shields
+
+2010-05-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* gfxmenu/view.c (grub_gfxmenu_draw_terminal_box): Apply only to current
 	buffer since gfxterm handles double repaint.
 
